Fixed spacing in search bar

--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -16,6 +16,8 @@ section.filters button {
     border: 0;
     border-radius: 4px;
     margin-right: 30px;
+    margin-top: 11px;
+    margin-bottom: 11px;
     opacity: 100%;
     font-size: 18px;
 }
@@ -45,7 +47,7 @@ h3 {
     font-weight: 600;
     padding: 0px;
     margin: 0px;
-    margin-top: 15px;
+    margin-top: 17px;
 }
 
 h4 {
